--- a/TBN.cfg
+++ b/TBN.cfg
@@ -1,2 +1,2 @@
-Resources,1,https://drive.google.com/uc?export=download&id=1zdYuH-X9KcTZS86SsLzXmFs1ppdY5B7L,resources
-Config,1,https://drive.google.com/uc?export=download&id=1-P4G_z1Dec8_0xVGWXED3mS-BOJG5SwK,config
+Resources,1,https://raw.githubusercontent.com/Spacemike/TBNmodpack/raw/master/resources.zip,resources
+Config,1,https://raw.githubusercontent.com/Spacemike/TBNmodpack/raw/master/config.zip,config
