--- a/TBN.cfg
+++ b/TBN.cfg
@@ -62,4 +62,4 @@ Thermal Foundation,2.6.1.22,https://minecraft.curseforge.com/projects/thermal-fo
 Thermal Innovation,0.3.1.8,https://minecraft.curseforge.com/projects/thermal-innovation/files/2623101/download,mod
 ValkyrieLib,2.0.19.1,https://minecraft.curseforge.com/projects/valkyrielib/files/2654963/download,mod
 Woot,1.4.9,https://minecraft.curseforge.com/projects/woot/files/2656489/download,mod
-ZeroCore,0.1.2.3,https://minecraft.curseforge.com/projects/zerocore/files/2648891/download,mod
+ZeroCore,0.1.2.3,https://media.forgecdn.net/files/2648/891/zerocore-1.12-0.1.2.3.jar,mod
