--- a/TBN.cfg
+++ b/TBN.cfg
@@ -1,65 +1,65 @@
 Resources,1,https://raw.githubusercontent.com/Spacemike/TBNmodpack/master/resources.zip,resources
 Config,1,https://raw.githubusercontent.com/Spacemike/TBNmodpack/master/config.zip,config
-AE2 Stuff,0.7.0.4,https://minecraft.curseforge.com/projects/ae2-stuff/files/2491032/download,mod
-Applied Energistics 2,rv6-6,https://minecraft.curseforge.com/projects/applied-energistics-2/files/2652453/download,mod
-Baubles,1.5.2,https://minecraft.curseforge.com/projects/baubles/files/2518667/download,mod
-Bdlib,1.14.3.12,https://minecraft.curseforge.com/projects/bdlib/files/2518031/download,mod
-BiblioCraft,2.4.5,https://minecraft.curseforge.com/projects/bibliocraft/files/2574880/download,mod
-Brandon's Core,2.4.7.195,https://minecraft.curseforge.com/projects/brandons-core/files/2649656/download,mod
-ME Capability Adapter,1.0.1,https://minecraft.curseforge.com/projects/capability-adapter/files/2575182/download,mod
-CodeChicken Lib,3.2.2.353,https://minecraft.curseforge.com/projects/codechicken-lib-1-8/files/2618630/download,mod
-CoFH Core,4.6.1.22,https://minecraft.curseforge.com/projects/cofhcore/files/2623990/download,mod
-CoFH World,1.3.0.6,https://minecraft.curseforge.com/projects/cofh-world/files/2623091/download,mod
-Compact Machines,3.0.13,https://minecraft.curseforge.com/projects/compact-machines/files/2652576/download,mod
-CraftTweaker,4.1.13,https://minecraft.curseforge.com/projects/crafttweaker/files/2639477/download,mod
-Draconic Evolution,2.3.18.329,https://minecraft.curseforge.com/projects/draconic-evolution/files/2649660/download,mod
-EnderCore,0.5.43,https://minecraft.curseforge.com/projects/endercore/files/2632476/download,mod
-Ender IO,5.0.39,https://minecraft.curseforge.com/projects/ender-io/files/2652322/download,mod
-Ender Storage,2.4.5.135,https://minecraft.curseforge.com/projects/ender-storage-1-8/files/2594243/download,mod
-Environmental Tech,2.0.19.1,https://minecraft.curseforge.com/projects/environmental-tech/files/2654968/download,mod
-Extreme Reactors,0.4.5.50,https://minecraft.curseforge.com/projects/extreme-reactors/files/2648892/download,mod
-Forge MultiPart CBE,2.6.0.79,https://minecraft.curseforge.com/projects/forge-multipart-cbe/files/2626992/download,mod
-Friendly Fire,1.5.10,https://minecraft.curseforge.com/projects/friendly-fire/files/2643989/download,mod
-FTB Guides,1.0.2.27,https://minecraft.curseforge.com/projects/ftb-guides/files/2641236/download,mod
-FTB Library,5.4.0.73,https://minecraft.curseforge.com/projects/ftblib/files/2648347/download,mod
-FTB Utilities,5.3.0.68,https://minecraft.curseforge.com/projects/ftb-utilities/files/2649021/download,mod
-MrCrayfish's Furniture Mod,6.2.0,https://minecraft.curseforge.com/projects/mrcrayfish-furniture-mod/files/2648279/download,mod
-Ice and Fire,1.6.0,https://minecraft.curseforge.com/projects/ice-and-fire-dragons/files/2652473/download,mod
-Inventory Tweaks,1.63,https://minecraft.curseforge.com/projects/inventory-tweaks/files/2482481/download,mod
-Just Enough Items (JEI),4.13.1.225,https://minecraft.curseforge.com/projects/jei/files/2640458/download,mod
-JEI Integration,1.5.1.36,https://minecraft.curseforge.com/projects/jei-integration/files/2491927/download,mod
-JourneyMap,5.5.3,https://minecraft.curseforge.com/projects/journeymap/files/2640111/download,mod
-Just Enough Resources,0.8.10.50,https://minecraft.curseforge.com/projects/just-enough-resources-jer/files/2599965/download,mod
-LLibrary,1.7.17,https://minecraft.curseforge.com/projects/llibrary/files/2644704/download,mod
-Lost Cities,2.0.12,https://minecraft.curseforge.com/projects/the-lost-cities/files/2623319/download,mod
-Mantle,1.3.3.39,https://minecraft.curseforge.com/projects/mantle/files/2630843/download,mod
-MCMultiPart,2.5.3,https://minecraft.curseforge.com/projects/mcmultipart/files/2615930/download,mod
-ModTweaker,4.0.15,https://minecraft.curseforge.com/projects/modtweaker/files/2629419/download,mod
-MrTJPCore,2.1.3.35,https://minecraft.curseforge.com/projects/mrtjpcore/files/2572409/download,mod
-MTLib,3.0.5,https://minecraft.curseforge.com/projects/mtlib/files/2567171/download,mod
-Natura,4.3.2.65,https://minecraft.curseforge.com/projects/natura/files/2646758/download,mod
-NetherPortalFix,5.3.17,https://minecraft.curseforge.com/projects/netherportalfix/files/2612052/download,mod
-OpenComputers,1.7.3.146,https://minecraft.curseforge.com/projects/opencomputers/files/2638675/download,mod
-ProjectRed-Base,4.9.1.92,https://minecraft.curseforge.com/projects/project-red-base/files/2572423/download,mod
-ProjectRed-Compat,4.9.1.92,https://minecraft.curseforge.com/projects/project-red-compat/files/2572420/download,mod
-ProjectRed-Fabrication,4.9.1.92,https://minecraft.curseforge.com/projects/project-red-fabrication/files/2572424/download,mod
-ProjectRed-Integration,4.9.1.92,https://minecraft.curseforge.com/projects/project-red-integration/files/2572427/download,mod
-ProjectRed-Lighting,4.9.1.92,https://minecraft.curseforge.com/projects/project-red-lighting/files/2572426/download,mod
-ProjectRed-Mechanical,4.9.1.92,https://minecraft.curseforge.com/projects/project-red-mechanical/files/2572422/download,mod
-ProjectRed-World,4.9.1.92,https://minecraft.curseforge.com/projects/project-red-world/files/2572421/download,mod
-Quick Leaf Decay,1.2.4,https://minecraft.curseforge.com/projects/quick-leaf-decay/files/2469364/download,mod
-Redstone++,ver1.3.B2 ,https://minecraft.curseforge.com/projects/redstoneplusplus/files/2576949/download,mod
-RedstoneFlux,2.1.0.6,https://minecraft.curseforge.com/projects/redstone-flux/files/2623090/download,mod
-Solar Flux Reborn,4.20,https://minecraft.curseforge.com/projects/solar-flux-reborn/files/2650781/download,mod
-Thaumcraft,6.1.BETA26,https://minecraft.curseforge.com/projects/thaumcraft/files/2629023/download,mod
-Thaumic Inventory Scanning,2.0.10,https://minecraft.curseforge.com/projects/thaumcraft-inventory-scanning/files/2559089/download,mod
-Thaumic JEI,1.5.5-23,https://minecraft.curseforge.com/projects/thaumic-jei/files/2637182/download,mod
-The One Probe,1.4.25,https://minecraft.curseforge.com/projects/the-one-probe/files/2629328/download,mod
-Thermal Cultivation,0.3.1.8,https://minecraft.curseforge.com/projects/thermal-cultivation/files/2623100/download,mod
-Thermal Dynamics,2.5.3.16,https://minecraft.curseforge.com/projects/thermal-dynamics/files/2624182/download,mod
-Thermal Expansion,5.5.2.39,https://minecraft.curseforge.com/projects/thermalexpansion/files/2624855/download,mod
-Thermal Foundation,2.6.1.22,https://minecraft.curseforge.com/projects/thermal-foundation/files/2623991/download,mod
-Thermal Innovation,0.3.1.8,https://minecraft.curseforge.com/projects/thermal-innovation/files/2623101/download,mod
-ValkyrieLib,2.0.19.1,https://minecraft.curseforge.com/projects/valkyrielib/files/2654963/download,mod
-Woot,1.4.9,https://minecraft.curseforge.com/projects/woot/files/2656489/download,mod
+AE2 Stuff,0.7.0.4,https://media.forgecdn.net/files/2491/32/ae2stuff-0.7.0.4-mc1.12.2.jar,mod
+Applied Energistics 2,rv6-6,https://media.forgecdn.net/files/2652/453/appliedenergistics2-rv6-stable-6.jar,mod
+Baubles,1.5.2,https://media.forgecdn.net/files/2518/667/Baubles-1.12-1.5.2.jar,mod
+Bdlib,1.14.3.12,https://media.forgecdn.net/files/2518/31/bdlib-1.14.3.12-mc1.12.2.jar,mod
+BiblioCraft,2.4.5,https://media.forgecdn.net/files/2574/880/BiblioCraft[v2.4.5][MC1.12.2].jar,mod
+Brandon's Core,2.4.7.195,https://media.forgecdn.net/files/2649/656/BrandonsCore-1.12.2-2.4.9.195-universal.jar,mod
+ME Capability Adapter,1.0.1,https://media.forgecdn.net/files/2575/182/capabilityadapter-1.0.1.jar,mod
+CodeChicken Lib,3.2.2.353,https://media.forgecdn.net/files/2618/630/CodeChickenLib-1.12.2-3.2.2.353-universal.jar,mod
+CoFH Core,4.6.1.22,https://media.forgecdn.net/files/2623/990/CoFHCore-1.12.2-4.6.1.22-universal.jar,mod
+CoFH World,1.3.0.6,https://media.forgecdn.net/files/2623/91/CoFHWorld-1.12.2-1.3.0.6-universal.jar,mod
+Compact Machines,3.0.13,https://media.forgecdn.net/files/2652/576/compactmachines3-1.12.2-3.0.13-b236.jar,mod
+CraftTweaker,4.1.13,https://media.forgecdn.net/files/2639/477/CraftTweaker2-1.12-4.1.13.jar,mod
+Draconic Evolution,2.3.18.329,https://media.forgecdn.net/files/2649/660/Draconic-Evolution-1.12.2-2.3.18.329-universal.jar,mod
+EnderCore,0.5.43,https://media.forgecdn.net/files/2632/476/EnderCore-1.12.2-0.5.43.jar,mod
+Ender IO,5.0.39,https://media.forgecdn.net/files/2652/322/EnderIO-1.12.2-5.0.39.jar,mod
+Ender Storage,2.4.5.135,https://media.forgecdn.net/files/2594/243/EnderStorage-1.12.2-2.4.5.135-universal.jar,mod
+Environmental Tech,2.0.19.1,https://media.forgecdn.net/files/2654/968/environmentaltech-1.12.2-2.0.19.1.jar,mod
+Extreme Reactors,0.4.5.50,https://media.forgecdn.net/files/2648/892/ExtremeReactors-1.12.2-0.4.5.50.jar,mod
+Forge MultiPart CBE,2.6.0.79,https://media.forgecdn.net/files/2626/992/ForgeMultipart-1.12.2-2.6.0.79-universal.jar,mod
+Friendly Fire,1.5.10,https://media.forgecdn.net/files/2643/989/FriendlyFire-1.12.2-1.5.10.jar,mod
+FTB Guides,1.0.2.27,https://media.forgecdn.net/files/2641/236/FTBGuides-1.0.2.27.jar,mod
+FTB Library,5.4.0.73,https://media.forgecdn.net/files/2648/347/FTBLib-5.4.0.73.jar,mod
+FTB Utilities,5.3.0.68,https://media.forgecdn.net/files/2649/21/FTBUtilities-5.3.0.68.jar,mod
+MrCrayfish's Furniture Mod,6.2.0,https://media.forgecdn.net/files/2648/279/furniture-6.2.0-1.12.2.jar,mod
+Ice and Fire,1.6.0,https://media.forgecdn.net/files/2652/473/iceandfire-1.6.0-1.12.2.jar,mod
+Inventory Tweaks,1.63,https://media.forgecdn.net/files/2482/481/InventoryTweaks-1.63.jar,mod
+Just Enough Items (JEI),4.13.1.225,https://media.forgecdn.net/files/2640/458/jei_1.12.2-4.13.1.225.jar,mod
+JEI Integration,1.5.1.36,https://media.forgecdn.net/files/2491/927/jeiintegration_1.12.2-1.5.1.36.jar,mod
+JourneyMap,5.5.3,https://media.forgecdn.net/files/2640/111/journeymap-1.12.2-5.5.3.jar,mod
+Just Enough Resources,0.8.10.50,https://media.forgecdn.net/files/2599/965/JustEnoughResources-1.12.2-0.8.9.48.jar,mod
+LLibrary,1.7.17,https://media.forgecdn.net/files/2644/704/llibrary-1.7.17-1.12.2.jar,mod
+Lost Cities,2.0.12,https://media.forgecdn.net/files/2623/319/lostcities-1.12-2.0.12.jar,mod
+Mantle,1.3.3.39,https://media.forgecdn.net/files/2630/843/Mantle-1.12-1.3.3.39.jar,mod
+MCMultiPart,2.5.3,https://media.forgecdn.net/files/2615/930/MCMultiPart-2.5.3.jar,mod
+ModTweaker,4.0.15,https://media.forgecdn.net/files/2629/419/modtweaker-4.0.15.jar,mod
+MrTJPCore,2.1.3.35,https://media.forgecdn.net/files/2572/409/MrTJPCore-1.12.2-2.1.3.35-universal.jar,mod
+MTLib,3.0.5,https://media.forgecdn.net/files/2567/171/MTLib-3.0.5.jar,mod
+Natura,4.3.2.65,https://media.forgecdn.net/files/2646/758/natura-1.12.2-4.3.2.65.jar,mod
+NetherPortalFix,5.3.17,https://media.forgecdn.net/files/2612/52/NetherPortalFix_1.12.1-5.3.17.jar,mod
+OpenComputers,1.7.3.146,https://media.forgecdn.net/files/2638/675/OpenComputers-MC1.12.2-1.7.3.146.jar,mod
+ProjectRed-Base,4.9.1.92,https://media.forgecdn.net/files/2572/423/ProjectRed-1.12.2-4.9.1.92-Base.jar,mod
+ProjectRed-Compat,4.9.1.92,https://media.forgecdn.net/files/2572/420/ProjectRed-1.12.2-4.9.1.92-compat.jar,mod
+ProjectRed-Fabrication,4.9.1.92,https://media.forgecdn.net/files/2572/424/ProjectRed-1.12.2-4.9.1.92-fabrication.jar,mod
+ProjectRed-Integration,4.9.1.92,https://media.forgecdn.net/files/2572/427/ProjectRed-1.12.2-4.9.1.92-integration.jar,mod
+ProjectRed-Lighting,4.9.1.92,https://media.forgecdn.net/files/2572/426/ProjectRed-1.12.2-4.9.1.92-lighting.jar,mod
+ProjectRed-Mechanical,4.9.1.92,https://media.forgecdn.net/files/2572/422/ProjectRed-1.12.2-4.9.1.92-mechanical.jar,mod
+ProjectRed-World,4.9.1.92,https://media.forgecdn.net/files/2572/421/ProjectRed-1.12.2-4.9.1.92-world.jar,mod
+Quick Leaf Decay,1.2.4,https://media.forgecdn.net/files/2469/364/QuickLeafDecay-MC1.12.1-1.2.4.jar,mod
+Redstone++,ver1.3.B2,https://media.forgecdn.net/files/2576/949/Redstone++ ver1.3 BETA-2.jar,mod
+RedstoneFlux,2.1.0.6,https://media.forgecdn.net/files/2623/90/RedstoneFlux-1.12-2.1.0.6-universal.jar,mod
+Solar Flux Reborn,4.20,https://media.forgecdn.net/files/2650/781/SolarFluxReborn_1.12.2-4.20r.jar,mod
+Thaumcraft,6.1.BETA26,https://media.forgecdn.net/files/2629/23/Thaumcraft-1.12.2-6.1.BETA26.jar,mod
+Thaumic Inventory Scanning,2.0.10,https://media.forgecdn.net/files/2559/89/ThaumicInventoryScanning_1.12.2-2.0.10.jar,mod
+Thaumic JEI,1.5.5-23,https://media.forgecdn.net/files/2637/182/ThaumicJEI-1.12.2-1.5.5-23.jar,mod
+The One Probe,1.4.25,https://media.forgecdn.net/files/2629/328/theoneprobe-1.12-1.4.25.jar,mod
+Thermal Cultivation,0.3.1.8,https://media.forgecdn.net/files/2623/100/ThermalCultivation-1.12.2-0.3.1.8-universal.jar,mod
+Thermal Dynamics,2.5.3.16,https://media.forgecdn.net/files/2624/182/ThermalDynamics-1.12.2-2.5.3.16-universal.jar,mod
+Thermal Expansion,5.5.2.39,https://media.forgecdn.net/files/2624/855/ThermalExpansion-1.12.2-5.5.2.39-universal.jar,mod
+Thermal Foundation,2.6.1.22,https://media.forgecdn.net/files/2623/991/ThermalFoundation-1.12.2-2.6.1.22-universal.jar,mod
+Thermal Innovation,0.3.1.8,https://media.forgecdn.net/files/2623/101/ThermalInnovation-1.12.2-0.3.1.8-universal.jar,mod
+ValkyrieLib,2.0.19.1,https://media.forgecdn.net/files/2654/963/valkyrielib-1.12.2-2.0.19.1.jar,mod
+Woot,1.4.9,https://media.forgecdn.net/files/2656/489/woot-1.12.2-1.4.9.jar,mod
 ZeroCore,0.1.2.3,https://media.forgecdn.net/files/2648/891/zerocore-1.12-0.1.2.3.jar,mod
