--- a/RMP.cfg
+++ b/RMP.cfg
@@ -52,7 +52,7 @@ ProjectRed-Lighting,4.9.1.92,https://media.forgecdn.net/files/2572/426/ProjectRe
 ProjectRed-Mechanical,4.9.1.92,https://media.forgecdn.net/files/2572/422/ProjectRed-1.12.2-4.9.1.92-mechanical.jar,mod
 ProjectRed-World,4.9.1.92,https://media.forgecdn.net/files/2572/421/ProjectRed-1.12.2-4.9.1.92-world.jar,mod
 Quick Leaf Decay,1.2.4,https://media.forgecdn.net/files/2469/364/QuickLeafDecay-MC1.12.1-1.2.4.jar,mod
-Redstone++,ver1.3.B2,https://media.forgecdn.net/files/2576/949/Redstone++ ver1.3 BETA-2.jar,mod
+Redstone++,ver1.3.B2,"https://media.forgecdn.net/files/2576/949/Redstone++ ver1.3 BETA-2.jar",mod
 RedstoneFlux,2.1.0.6,https://media.forgecdn.net/files/2623/90/RedstoneFlux-1.12-2.1.0.6-universal.jar,mod
 RFTools,2.1.0.6,https://media.forgecdn.net/files/2641/797/rftools-1.12-7.59.jar,mod
 RFTools Dimensions,5.63,https://media.forgecdn.net/files/2638/502/rftoolsdim-1.12-5.63.jar,mod
